# BarcodeReader-DandN-

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Links.txt  Makefile  dontMindMe.txt  test2.txt
TESTS/: test2.txt
include/: BarcodeDecoder.h  BarcodeOps.h  BarcodeReader.h  BarcodeValidation.h  Barcode_ops.h  Defines.h  PublicAPI.h  StringOps.h  Vector.h  fileParser.h  matrixOps.h  queueOps.h  searchOps.h  string_ops.h
output/: main  massif.out.5018
src/: BarcodeDecoder.c  BarcodeOps.c  BarcodeReader.c  BarcodeValidation.c  Barcode_ops.c  FileParser.c  MatrixOps.c  StringOps.c  Vector.c  main.c  matrixOps.c  queueOps.c  searchOps.c  test.c
tests/: test2.txt
